# eventlog-socket

./: .gitignore  CONTRIBUTING.md  Doxyfile  Doxyfile.dev  PLUGINS.md  README.md  cabal.project  cabal.project.config  ci.sh  eventlog-socket.cabal
.github/actions/setup-actionlint/: action.yml
.github/actions/setup-cabal-fmt/: action.yml
.github/actions/setup-clang-format/: action.yml
.github/actions/setup-fourmolu/: action.yml
.github/actions/setup-ghc-events/: action.yml
.github/workflows/: ci.yml
cbits/: eventlog_socket.c
eventlog-socket/: CHANGELOG.md  CONTRIBUTING.md  eventlog-socket.cabal  pyproject.toml
eventlog-socket-control/: CHANGELOG.md  eventlog-socket-control.cabal
eventlog-socket-control/src/GHC/Eventlog/Socket/: Control.hs
eventlog-socket-tests/: CHANGELOG.md  eventlog-socket-tests.cabal  eventlog-socket-tests.sh
eventlog-socket-tests/src/GHC/Eventlog/Socket/: Test.hs
eventlog-socket-tests/tests/: Main.hs
eventlog-socket-tests/tests/Test/: Common.hs
eventlog-socket/cbits/: eventlog_socket.c
eventlog-socket/cbits/eventlog_socket/: control.c  control.h  debug.h  error.c  error.h  hooks.c  hooks.h  hsapi.c  hsapi.h  init_state.h  macros.h  poll.h  string.c  string.h  worker.c  worker.h  write_buffer.c  write_buffer.h
eventlog-socket/include/: eventlog_socket.h
eventlog-socket/src/GHC/Eventlog/: Socket.hs  Socket.hsc
eventlog-socket/src/GHC/Eventlog/Socket/: CApi.hsc
eventlog-socket/tests/: cases.py  run_tests.py  scripts.py
examples/capn-dance/: LICENSE  capn-dance.cabal
examples/capn-dance/app/: Main.hs
examples/custom-command/: custom-command.cabal
examples/custom-command-c-main/: README.md  custom-command-c-main.cabal
examples/custom-command-c-main/app/: Main.hs
examples/custom-command-c-main/cbits/: custom-command-c-main.c
examples/custom-command/app/: Main.hs
examples/custom-command/cbits/: custom-command-c-main.c  custom-command-handler.c  custom-command-handler.h  custom-command-main.c
examples/fibber/: fibber.cabal
examples/fibber-c-main/: fibber-c-main.cabal  fibber-c-main.sh
examples/fibber-c-main/app/: Main.hs
examples/fibber-c-main/cbits/: fibber-c-main.c
examples/fibber-c-reconnect/: fibber-c-reconnect.cabal
examples/fibber-c-reconnect/app/: Main.hs
examples/fibber-c-reconnect/cbits/: fibber-c-reconnect.c
examples/fibber-tcp/: fibber-tcp.cabal
examples/fibber-tcp/app/: Main.hs
examples/fibber/app/: Main.hs
examples/oddball/: oddball.cabal
examples/oddball/app/: Main.hs
examples/parfib/app/: Main.hs
include/: eventlog_socket.h
scripts/: build-doxygen.sh  build-from-sdist.sh  build-haddock.sh  dev-dependencies.txt  format-clang-format.sh  generate-dotclangd.sh  lint-clang-format.sh  lint-nm.sh  pre-commit.sh  setup-clangd.sh  test-haskell.sh  test-python.sh  test.sh  ttyd.sh
src/GHC/Eventlog/: Socket.hs
tests/: __init__.py  cases.py  run_tests.py  scripts.py  test-normal.sh  test-reconnect.sh
