cabal-version:   3.0
name:            eventlog-socket-control
version:         0.1.1.0
synopsis:        Control command protocol for eventlog-socket.
description:
  The @eventlog-socket-control@ package contains utilities for creating messages for @eventlog-socket@'s control command protocol.

license:         BSD-3-Clause
license-file:    LICENSE
author:          Eventlog Socket Contributors
maintainer:      wen@well-typed.com
copyright:       (c) 2025-2026 Well-Typed
category:        System
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-socket.git
  subdir:   eventlog-socket-control

source-repository this
  type:     git
  location: https://github.com/well-typed/eventlog-socket.git
  tag:      eventlog-socket-control-0.1.1.0
  subdir:   eventlog-socket-control

common language
  ghc-options:        -Wall
  default-extensions:
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs

  default-language:   Haskell2010

library
  import:          language
  exposed-modules: GHC.Eventlog.Socket.Control
  build-depends:
    , base        >=4.14 && <5
    , binary      >=0.8  && <0.9
    , bytestring  >=0.9  && <0.13
    , text        >=1    && <3

  hs-source-dirs:  src
