cabal-version:   3.0
name:            eventlog-socket-tests
version:         0.1.0.0
synopsis:        Test suite for eventlog-socket
description:     Test suite for eventlog-socket.
license:         BSD-3-Clause
license-file:    LICENSE
author:          Eventlog Socket Contributors
maintainer:      wen@well-typed.com
copyright:       (c) 2025 Well-Typed
category:        Test
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

flag debug
  description: Enable debug logging
  default:     False
  manual:      True

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-socket.git
  subdir:   eventlog-socket-tests

common language
  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wunticked-promoted-constructors -Wunused-packages

  default-extensions:
    ConstraintKinds
    DuplicateRecordFields
    GADTs
    ImplicitParams
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeApplications

  default-language:   Haskell2010

test-suite eventlog-socket-tests
  import:         language
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  other-modules:  Test.Common
  ghc-options:    -threaded
  build-depends:
    , base                     >=4.14  && <5
    , binary                   >=0.8   && <0.9
    , bytestring               >=0.11  && <0.13
    , eventlog-socket
    , eventlog-socket-control
    , filepath                 >=1.5   && <1.6
    , ghc-events               >=0.20  && <0.21
    , machines                 >=0.7.4 && <0.8
    , network                  >=3.2.7 && <3.3
    , process                  >=1.6   && <1.7
    , tasty                    >=1.2   && <1.6
    , tasty-hunit              >=0.10  && <0.11
    , temporary                >=1.3   && <1.4
    , text                     >=1.0   && <2.2

  if flag(debug)
    build-depends: stm >=2.5 && <2.6
    cpp-options:   -DDEBUG
