cabal-version:      2.2
name:               eventlog-socket
version:            0.1.1.0
synopsis:           Stream GHC eventlog events to external processes
description:        Stream GHC eventlog events to external processes.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2018 Ben Gamari
category:           System
build-type:         Simple
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

extra-source-files:
  cbits/eventlog_socket/control.c
  cbits/eventlog_socket/control.h
  cbits/eventlog_socket/debug.h
  cbits/eventlog_socket/macros.h
  cbits/eventlog_socket/poll.h
  cbits/eventlog_socket/write_buffer.c
  cbits/eventlog_socket/write_buffer.h
  cbits/eventlog_socket.c
  include/eventlog_socket.h

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-socket.git
  subdir:   eventlog-socket

flag debug
  description: Enable debug logging.
  default:     False
  manual:      True

flag optimise-heavily
  description: Pass @-O2@ to the C compiler.
  default:     False
  manual:      True

library
  exposed-modules:    GHC.Eventlog.Socket
  other-extensions:   CApiFFI

  -- Use base lower bound as proxy for GHC >= 8.10
  build-depends:      base >=4.14 && <5
  hs-source-dirs:     src
  cc-options:         -std=c11
  default-language:   Haskell2010
  default-extensions: LambdaCase
  c-sources:
    cbits/eventlog_socket/control.c
    cbits/eventlog_socket/write_buffer.c
    cbits/eventlog_socket.c

  include-dirs:       include
  install-includes:   eventlog_socket.h

  if flag(debug)
    -- 2025-12-17:
    -- cpp-options are not passed to C code, see:
    -- https://github.com/haskell/cabal/issues/7635
    cc-options: -DDEBUG=1

  if flag(optimise-heavily)
    cc-options: -O2
