cabal-version: 2.2
name:          custom-command
version:       0.1.0.0
synopsis:      Example program that registers a custom command
description:   Example program that registers a custom command.
license:       BSD-3-Clause
license-file:  LICENSE
author:        Eventlog Socket Contributors
maintainer:    wen@well-typed.com
copyright:     (c) 2025 Well-Typed
category:      Test
build-type:    Simple

executable custom-command
  main-is:          Main.hs
  hs-source-dirs:   app
  c-sources:
    cbits/custom-command-c-main.c
    cbits/custom-command-handler.c

  include-dirs:     cbits
  includes:         custom-command-handler.h
  default-language: Haskell2010
  build-depends:
    , base             >=4.14 && <5
    , eventlog-socket  >=0.1  && <0.2

  ghc-options:      -threaded -no-hs-main

  if impl(ghc <9.4)
    ghc-options: -eventlog
