cabal-version: 2.2
name:          fibber-c-main
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Wen Kokke
copyright:     (c) 2025 Wen Kokke
build-type:    Simple

executable fibber-c-main
  main-is:          Main.hs
  hs-source-dirs:   app
  c-sources:        cbits/fibber-c-main.c
  default-language: Haskell2010
  build-depends:
    , base             >=4.14 && <5
    , eventlog-socket

  ghc-options:      -threaded -no-hs-main

  if impl(ghc <9.4)
    ghc-options: -eventlog
