cabal-version:      2.2
name:               fibber-c-reconnect
version:            0.1.0.0
synopsis:           Test executable for eventlog reconnect behavior
build-type:         Simple

executable fibber-c-reconnect
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base >=4.14 && <5
                    , eventlog-socket
  default-language:   Haskell2010
  c-sources:          cbits/fibber-c-reconnect.c
  ghc-options: -no-hs-main -threaded -debug -g3
