cabal-version: 2.2
name:          fibber
version:       0.1.0.0
synopsis:      Example program that computes Fibonnaci numbers
description:   Example program that computes Fibonnaci numbers.
license:       BSD-3-Clause
license-file:  LICENSE
author:        Eventlog Socket Contributors
maintainer:    wen@well-typed.com
copyright:     (c) 2025 Well-Typed
category:      Test
build-type:    Simple

executable fibber
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base             >=4.14 && <5
    , eventlog-socket  >=0.1  && <0.2

  ghc-options:      -threaded -rtsopts

  if impl(ghc <9.4)
    ghc-options: -eventlog
